--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Cotact Me</title>
+	<title>Contact Me</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -163,7 +163,7 @@
 			</section>
 		</div>
 	
-		<div class="mobile_device_480px">
+		<div class="mobile_device_380px">
 			<section style="margin-left: 1%;" id="banner1">
 
 
