--- a/experience.html
+++ b/experience.html
@@ -182,13 +182,13 @@
 
 
 					<div class="content">
-						<header class="major1" style="font-size: smaller;margin-left: 13%;">
+						<header class="major1" style="font-size: smaller;margin-left: 19%;">
 							<h2><b>Work experience</b></h2>
 							<p>Work, Internship and Volunteership</p>
 						</header>
 
 
-						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;">
+						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;text-align: center;">
 							<br />
 							<p><span class="image centre"><img src="vooplogo.png" alt="" /></span><b><br />Data
 									Scientist Intern,
@@ -224,7 +224,7 @@
 
 
 
-						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;">
+						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;text-align: center;">
 							<p><span class="image centre"><img src="rmit.png" alt="" /></span><b> <br /> Research Assistant,
 									RMIT
 									University</b> <br />
@@ -256,7 +256,7 @@
 
 
 
-						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;">
+						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;text-align: center;">
 							<p><span class="image centre"><img src="newgenlogo.png" alt="" /></span><b> <br />Software
 									Engineer, Newgen
 									Software Technologies</b> <br />
@@ -289,7 +289,7 @@
 
 
 
-						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;">
+						<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;font-weight: 300;text-align: center;">
 
 							<p><span class="image centre"><img src="LandTlogo.png" alt="" /></span><b> <br />Software
 									Engineering Intern,
