--- a/education.html
+++ b/education.html
@@ -282,13 +282,13 @@
 
 
 			<div class="content">
-				<header class="major1" style="font-size: smaller; margin-left: 15%;">
+				<header class="major1" style="font-size: smaller; margin-left: 21%;">
 					<h2><b>Education</b></h2>
 					<p>Basic Qualification and Certifcations</p>
 				</header>
 
 
-				<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;">
+				<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;text-align: center;">
 					<br />
 					<p><span class="image center"><img src="sairam.png" alt="" /></span><b> <br />Bachelor's of Information
 							Technology <br />Sri Sai Ram Institue of Technology <br /> Year : 2013 - 2017 <br /> Grade: 74%</b> <br />
@@ -337,7 +337,7 @@
 				
 
 
-				<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%;">
+				<div style="width: 80%; float:left; font-size: smaller; margin-left: 12%; text-align: center;">
 					<p><span class="image center"><img src="rmit.png" alt="" /></span><b> <br />Master of Data Science, RMIT
 							University <br />
 							Year : 2018 - 2020 <br /> Grade: 75%</b> <br />
