--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<br />
 	
 									<ul class="actions">
-										<li><a href="#" class="button" onclick="window.open('resume.pdf');">Check My
+										<li><a href="#" class="button" onclick="window.open('SantoshKumaravelSundaravadivelu_Resume.pdf');">Check My
 												Resume</a></li>
 										<li><a href="https://voop.global/covid19-analysis" class="button"> Recent
 												Project</a></li>
