--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button" onclick="window.open('resume.pdf');">Check My
 												Resume</a></li>
-										<li><a href="https://voop.global/covid19-analysis" class="button"> Recent
+										<li><a href="Voop_project.html" class="button"> Recent
 												Project</a></li>
 									
 	
@@ -591,7 +591,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button" onclick="window.open('resume.pdf');">Check My
 												Resume </a></li>
-										<li><a href="https://voop.global/covid19-analysis" class="button"> Recent
+										<li><a href="Voop_project.html" class="button"> Recent
 												Project</a></li>
 									
 									</ul>
