--- a/experience.html
+++ b/experience.html
@@ -76,7 +76,7 @@
 							<ul class="actions">
 
 								<li><a href="https://voop.global/" class="button">Learn More</a></li>
-								<li><a href="https://voop.global/covid19-analysis" class="button"> Recent Project</a>
+								<li><a href="Voop_project.html" class="button"> Recent Project</a>
 								</li>
 
 							</ul>
@@ -213,7 +213,7 @@
 								<ul class="actions">
 
 									<li><a href="https://voop.global/" class="button">Learn More</a></li>
-									<li><a href="https://voop.global/covid19-analysis" class="button"> Recent
+									<li><a href="Voop_project.html" class="button"> Recent
 											Project</a></li>
 
 								</ul>
